complete pricing grid

--- a/pricing-grid.html
+++ b/pricing-grid.html
@@ -10,15 +10,237 @@
   <body>
     <!-- Global Container -->
     <div
-      class="flex items-center justify-center h-screen bg-slate-800 text-white"
+      class="flex items-center justify-center min-h-screen bg-slate-800 text-white"
     >
       <!-- Flex Container -->
       <div
-        class="flex flex-col md:flex-row space-y-6 md:space-y-0 md:space-x-6"
+        class="flex flex-col md:flex-row space-y-6 md:space-y-0 md:space-x-6 my-6 md:my-0"
       >
-        <div>Item 1</div>
-        <div>Item 2</div>
-        <div>Item 3</div>
+        <!-- Col 1 -->
+        <div class="bg-slate-700 text-white rounded-xl">
+          <!-- Upper Container -->
+          <div class="bg-slate-800 rounded-t-xl p-8 mx-3 mt-3">
+            <div class="text-center uppercase">Basic</div>
+            <h2 class="text-center mt-10 text-5xl font-serif">100GB</h2>
+            <h3 class="text-center mt-2">$1.99/Month</h3>
+            <div class="flex justify-center">
+              <a
+                href="#"
+                class="border inline-block px-10 py-3 my-6 text-center border-violet-600 rounded-lg hover:bg-violet-800 hover:border-violet-800 duration-200"
+                >Purchase</a
+              >
+            </div>
+          </div>
+          <!-- Border -->
+          <div class="border-t border-slate-700"></div>
+          <!-- Lower Container -->
+          <div class="bg-slate-800 rounded-b-xl p-8 mx-3 mb-3">
+            <!-- List Container -->
+            <div class="flex flex-col justify-center">
+              <!-- List 1 -->
+              <div class="flex">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-5 h-5"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M5 12l5 5l10 -10" />
+                </svg>
+                <span class="text-sm ml-1">100 GB of Storage</span>
+              </div>
+              <!-- List 2 -->
+              <div class="flex">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-5 h-5"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M5 12l5 5l10 -10" />
+                </svg>
+                <span class="text-sm ml-1">Option to add members</span>
+              </div>
+              <!-- List 3 -->
+              <div class="flex">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-5 h-5"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M5 12l5 5l10 -10" />
+                </svg>
+                <span class="text-sm ml-1">Extra member benefits</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Col 2 -->
+        <div class="bg-violet-600 text-white rounded-xl">
+          <!-- Upper Container -->
+          <div class="bg-slate-800 rounded-t-xl p-8 mx-3 mt-3">
+            <div class="text-center uppercase">Standard</div>
+            <h2 class="text-center mt-10 text-5xl font-serif">200GB</h2>
+            <h3 class="text-center mt-2">$3.99/Month</h3>
+            <div class="flex justify-center">
+              <a
+                href="#"
+                class="border inline-block px-10 py-3 my-6 text-center border-violet-600 rounded-lg hover:bg-violet-800 hover:border-violet-800 duration-200"
+                >Purchase</a
+              >
+            </div>
+          </div>
+          <!-- Border -->
+          <div class="border-t border-slate-700"></div>
+          <!-- Lower Container -->
+          <div class="bg-slate-800 rounded-b-xl p-8 mx-3 mb-3">
+            <!-- List Container -->
+            <div class="flex flex-col justify-center">
+              <!-- List 1 -->
+              <div class="flex">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-5 h-5"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M5 12l5 5l10 -10" />
+                </svg>
+                <span class="text-sm ml-1">200 GB of Storage</span>
+              </div>
+              <!-- List 2 -->
+              <div class="flex">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-5 h-5"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M5 12l5 5l10 -10" />
+                </svg>
+                <span class="text-sm ml-1">Option to add members</span>
+              </div>
+              <!-- List 3 -->
+              <div class="flex">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-5 h-5"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M5 12l5 5l10 -10" />
+                </svg>
+                <span class="text-sm ml-1">Extra member benefits</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Col 3 -->
+        <div class="bg-slate-700 text-white rounded-xl">
+          <!-- Upper Container -->
+          <div class="bg-slate-800 rounded-t-xl p-8 mx-3 mt-3">
+            <div class="text-center uppercase">Premium</div>
+            <h2 class="text-center mt-10 text-5xl font-serif">2TB</h2>
+            <h3 class="text-center mt-2">$8.99/Month</h3>
+            <div class="flex justify-center">
+              <a
+                href="#"
+                class="border inline-block px-10 py-3 my-6 text-center border-violet-600 rounded-lg hover:bg-violet-800 hover:border-violet-800 duration-200"
+                >Purchase</a
+              >
+            </div>
+          </div>
+          <!-- Border -->
+          <div class="border-t border-slate-700"></div>
+          <!-- Lower Container -->
+          <div class="bg-slate-800 rounded-b-xl p-8 mx-3 mb-3">
+            <!-- List Container -->
+            <div class="flex flex-col justify-center">
+              <!-- List 1 -->
+              <div class="flex">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-5 h-5"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M5 12l5 5l10 -10" />
+                </svg>
+                <span class="text-sm ml-1">2 TB of Storage</span>
+              </div>
+              <!-- List 2 -->
+              <div class="flex">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-5 h-5"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M5 12l5 5l10 -10" />
+                </svg>
+                <span class="text-sm ml-1">Option to add members</span>
+              </div>
+              <!-- List 3 -->
+              <div class="flex">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-5 h-5"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M5 12l5 5l10 -10" />
+                </svg>
+                <span class="text-sm ml-1">Extra member benefits</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
