--- a/image-gallery.html
+++ b/image-gallery.html
@@ -5,7 +5,408 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Product Modal</title>
+    <title>Image Gallery</title>
   </head>
-  <body></body>
+  <body>
+    <div class="flex justify-center items-center min-h-screen bg-cyan-50">
+      <div class="bg-white rounded-3xl shadow-2xl p-6 space-y-10 m-4 md:p-40">
+        <!-- Menu Container -->
+        <div
+          class="flex flex-col justify-center items-center space-y-2 md:flex-row md:justify-end md:space-x-8 md:space-y-0"
+        >
+          <!-- Menu Item 1-->
+          <div class="group">
+            <a href="#">Vector</a>
+            <div
+              class="mx-2 mt-2 mb-3 border-b-2 border-black opacity-0 duration-500 group-hover:opacity-100"
+            ></div>
+          </div>
+          <!-- Menu Item 2-->
+          <div class="group">
+            <a href="#">Illustration</a>
+            <div
+              class="mx-2 mt-2 mb-3 border-b-2 border-black opacity-0 duration-500 group-hover:opacity-100"
+            ></div>
+          </div>
+          <!-- Menu Item 3-->
+          <div class="group">
+            <a href="#">Images</a>
+            <div
+              class="mx-2 mt-2 mb-3 border-b-2 border-black opacity-0 duration-500 group-hover:opacity-100"
+            ></div>
+          </div>
+          <!-- Menu Item 4-->
+          <div class="group">
+            <a href="#">Icons</a>
+            <div
+              class="mx-2 mt-2 mb-3 border-b-2 border-black opacity-0 duration-500 group-hover:opacity-100 md:mx-0"
+            ></div>
+          </div>
+        </div>
+        <!-- Search Container -->
+        <div
+          class="flex justify-between flex-col space-y-3 md:flex-row md:space-y-3"
+        >
+          <!-- Input & Search Icon -->
+          <div class="flex justify-between border-b-2 md:w-80">
+            <input
+              type="text"
+              placeholder="Search"
+              class="border-none ml-4 placeholder:text-thin focus:outline-none"
+            />
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="w-8 text-gray-300 duration-200 hover:scale-110"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <circle cx="10" cy="10" r="7" />
+              <line x1="21" y1="21" x2="15" y2="15" />
+            </svg>
+          </div>
+          <!-- Button -->
+          <button
+            class="py-2 px-14 bg-black text-lg text-white font-normal rounded-md shadow-2xl duration-500 hover:bg-white hover:text-black border border-black"
+          >
+            Upload
+          </button>
+        </div>
+        <!-- Images Container -->
+        <div class="grid gap-4 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5">
+          <!-- Image 1 -->
+          <div class="relative group">
+            <img src="assets/img/img1.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 2 -->
+          <div class="relative group">
+            <img src="assets/img/img2.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 3 -->
+          <div class="relative group">
+            <img src="assets/img/img3.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 4 -->
+          <div class="relative group">
+            <img src="assets/img/img4.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 5 -->
+          <div class="relative group">
+            <img src="assets/img/img5.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 6 -->
+          <div class="relative group">
+            <img src="assets/img/img6.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 7 -->
+          <div class="relative group">
+            <img src="assets/img/img7.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 8 -->
+          <div class="relative group">
+            <img src="assets/img/img8.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 9 -->
+          <div class="relative group">
+            <img src="assets/img/img9.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Repeat  -->
+
+          <!-- Image 1 -->
+          <div class="relative group">
+            <img src="assets/img/img1.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 2 -->
+          <div class="relative group">
+            <img src="assets/img/img2.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 3 -->
+          <div class="relative group">
+            <img src="assets/img/img3.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 4 -->
+          <div class="relative group">
+            <img src="assets/img/img4.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 5 -->
+          <div class="relative group">
+            <img src="assets/img/img5.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 6 -->
+          <div class="relative group">
+            <img src="assets/img/img6.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 7 -->
+          <div class="relative group">
+            <img src="assets/img/img7.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 8 -->
+          <div class="relative group">
+            <img src="assets/img/img8.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Image 9 -->
+          <div class="relative group">
+            <img src="assets/img/img9.jpg" alt="" class="w-72" />
+            <!-- Overlay -->
+            <div
+              class="absolute bottom-0 left-0 right-0 w-full opacity-0 p-2 px-4 text-white bg-black bg-opacity-40 group-hover:opacity-100 duration-500"
+            >
+              <div class="flex justify-between w-full">
+                <div class="font-normal">
+                  <div class="text-sm">Abstract Painting</div>
+                  <div class="text-xs">243 Like - 34 Shares</div>
+                </div>
+                <div class="flex items-center">
+                  <img src="assets/img/bookmark.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
