--- a/login-modal.html
+++ b/login-modal.html
@@ -21,5 +21,20 @@
     </script>
     <title>Login</title>
   </head>
-  <body></body>
+  <body>
+    <div class="flex justify-center items-center min-h-screen bg-rose-50">
+      <div
+        class="relative flex flex-col m-6 space-y-10 bg-white rounded-2xl shadow-2xl md:flex-row md:space-y-0 md:m-0"
+      >
+        <!-- Left Side Content -->
+        <div class="flex flex-col p-6 md:p-20">Login</div>
+        <!-- Right Side Image -->
+        <img
+          src="assets/img/login_image.jpg"
+          alt=""
+          class="w-[340px] hidden md:block"
+        />
+      </div>
+    </div>
+  </body>
 </html>
